src/test/ui/can-begin-expr-check.stderr
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `enum`
  --> $DIR/can-begin-expr-check.rs:29:12
   |
LL |     return enum; //~ ERROR expected one of `.`, `;`, `?`, `}`, or an operator, found `enum`
   |            ^^^^ expected one of `.`, `;`, `?`, `}`, or an operator here

error: aborting due to previous error

